--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,5 +2,52 @@
 name = "docka"
 version = "0.1.0"
 edition = "2024"
+authors = ["kyotalab"]
+description = "A lightweight TUI Docker management tool"
+license = "MIT"
+repository = "https://github.com/kyotalab/docka"
+keywords = ["docker", "tui", "cli", "containers"]
+categories = ["command-line-utilities"]
 
 [dependencies]
+# TUI Framework - Cross-platform terminal UI
+crossterm = "0.29.0"
+ratatui = "0.29.0"
+
+# Async Runtime - Multi-threaded async execution
+tokio = { version = "1.46.1", features = ["rt-multi-thread", "macros", "sync", "time"] }
+async-trait = "0.1.88"
+
+# Docker API Client - Official Rust Docker SDK
+bollard = "0.19.1"
+
+# Serialization - Data structure serialization/deserialization
+serde = { version = "1.0.219", features = ["derive"] }
+chrono = { version = "0.4.41", features = ["serde"] }
+
+# Error Handling - Structured error management
+anyhow = "1.0.98"
+thiserror = "2.0.12"
+
+# Logging - Structured logging framework
+tracing = "0.1.41"
+tracing-subscriber = "0.3.19"
+
+[dev-dependencies]
+# Testing Framework - Mocking and async testing
+mockall = "0.13.1"
+tokio-test = "0.4.4"
+tempfile = "3.20.0"
+
+[profile.release]
+# Performance Optimization - 200MB memory constraint compliance
+opt-level = 3
+lto = true
+codegen-units = 1
+panic = "abort"
+strip = true
+
+[profile.dev]
+# Development Speed - Fast compilation for development
+opt-level = 0
+debug = true
