--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,7 @@ bollard = "0.19.1"
 
 # Serialization - Data structure serialization/deserialization
 serde = { version = "1.0.219", features = ["derive"] }
+serde_json = "1.0.141"
 chrono = { version = "0.4.41", features = ["serde"] }
 
 # Error Handling - Structured error management
